# rust-clean-architecture

./: .env  .gitignore  Cargo.toml  README.md
db/: init.sql
src/: main.rs
src/config/: config.rs
src/internal/: mod.rs
src/internal/controller/: middleware.rs  mod.rs  response.rs  user_controller.rs
src/internal/user/: mod.rs
src/internal/user/entity/: mod.rs  token.rs  user.rs  user_test.rs
src/internal/user/usecase/: mod.rs  traits.rs  user.rs
src/internal/user/usecase/repo/: mod.rs  repo.rs  user_repo.rs
src/internal/user/usecase/webapi/: mod.rs
src/pkg/postgres/: connection.rs
