[package]
name = "rust-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = {version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "chrono" ]}
actix-web = "4.3.0"

serde = "1.0.152"
serde_json = "1.0.93"
serde_derive = "1.0.152"
bcrypt = "0.14.0"

async-trait = "0.1.64"

jwt = "0.16.0"
uuid = {version = "1.3.0", features = [ "v4" ]}
hmac = "0.12.1"
sha2 = "0.10.6"

chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
